// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embedToHtml should return anchor tag with path 1`] = `"<a href=\\"/urn:test:1\\" >text</a>"`;

exports[`embedToHtml should return anchor tag with path in target _blank if isOembed 1`] = `"<a href=\\"/urn:test:1\\" target=\\"_blank\\">text</a>"`;

exports[`fetchResource for content-link 1`] = `
Object {
  "data": Object {
    "contentId": "1",
  },
  "path": "/nb/subject:12/topic:1:183846/topic:1:183935/resource:1:110269",
}
`;

exports[`fetchResource for content-link with subject1 gives correct path 1`] = `
Object {
  "data": Object {
    "contentId": "1",
  },
  "path": "/nb/subject:1/topic:1:183846/topic:1:183935/resource:1:110269",
}
`;

exports[`fetchResource for content-link with subject12 gives correct path 1`] = `
Object {
  "data": Object {
    "contentId": "1",
  },
  "path": "/nb/subject:12/topic:1:183846/topic:1:183935/resource:1:110269",
}
`;

exports[`fetchResource with missing taxonomy data should fallback to path without taxonomy 1`] = `
Object {
  "data": Object {
    "contentId": "1",
  },
  "path": "/nb/article/1",
}
`;
